feat: replace Path.of with Paths.get